--- a/Predict heart disease.ipynb
+++ b/Predict heart disease.ipynb
@@ -11,6 +11,15 @@
     "\n",
     "Source des données : https://openclassrooms.com/fr/courses/4525326-realisez-des-modelisations-de-donnees-performantes/5754128-decouvrez-le-jeu-de-donnees-des-maladies-cardio-vasculaires\n",
     "\n",
+    "Mon package contenant ma classe LogReg: https://github.com/nicodesh/ModelStats\n",
+    "\n",
+    "A propos de la régression logistique :\n",
+    "\n",
+    "- Régression logistique appliquée à un cas d'ophtalmologie https://www.em-consulte.com/en/article/842576\n",
+    "- Coube ROC : https://www.em-consulte.com/rmr/article/144229\n",
+    "- Régression logistique en Python (sklearn / statsmodels) : https://towardsdatascience.com/building-a-logistic-regression-in-python-step-by-step-becd4d56c9c8\n",
+    "- Présentation universitaire sur la régression logistique : https://perso.univ-rennes1.fr/valerie.monbet/ExposesM2/2013/La%20re%CC%81gression%20logistique.pdf\n",
+    "\n",
     "## Import des librairies et de ma classe LogReg"
    ]
   },
